--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <!-- ? Import Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- ? End of Import Bootstrap -->
+    <!-- ? Import Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+    <!-- ? End of Import Font Awesome -->
     <title>PPTUII | Jasa Layanan Psikologi</title>
   </head>
   <body>
